--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 													alt="" />
 												<div>
 													<h3 class="title title--h4">Game Development</h3>
-													<p class="case-item__caption">I like to code things from scratch and bringing ideas to life through video games, i love seeing ideas turning into a full functioning game.</p>
+													<p class="case-item__caption">I like coding things from scratch and bringing ideas to life through video games, I love seeing ideas turning into a full functioning game.</p>
 												</div>
 											</div>
 										</div>
