--- a/index.html
+++ b/index.html
@@ -193,8 +193,16 @@
 													<h5 class="title title--h5 timeline__title"><img class="title-icon"
 														src="assets/img/duelit.jpg"
 														alt="" />Unity Game Developer</h5>
-													<span class="timeline__period">JUL 2023 — Present</span><br>
+													<span class="timeline__period">DEC 2022 — FEB 2024</span><br>
 													<span class="timeline__period">At <b>Duelit - Remote</b> </span>
+												</article>
+												<!-- Item -->
+												<article class="timeline__item">
+													<h5 class="title title--h5 timeline__title"><img class="title-icon"
+														src="assets/img/logopoly.png"
+														alt="" />Full Stack Dot Net Developer</h5>
+													<span class="timeline__period">MAR 2024 — Present</span><br>
+													<span class="timeline__period">At <b>POLYSOFT&CO - Sfax</b> </span>
 												</article>
 										</div>
 									</div>
